fixtures/frontend/milestone-2/invalid/unresolved-names/main.aivi
fun statusLabel:Text #status:Text =>
    status

val main =
    <Label text={statusLabel currentStatus} />
